hange machine problem

--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -41,15 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coin Change Machine\n",
-    "> Question about how many coins of each value should it use or give as change"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Minimum number of coins\n",
+    "**Minimum number of coins**\n",
     "\n",
     "Chef has infinite coins in denominations of rupees 5 and rupees 10.\n",
     "\n",
@@ -68,325 +60,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">  This solution don't work with float numbers, as we can se in the test in the cell below (below 2 cells).   \n",
-    "> It returns -1, but it should return 2 coins of 0.50 and 1 of 0.10!"
+    "> This solution works fine for this problem because 10 is multiple of 5, but with other numbers it didn't work."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coin 10: 0\n",
-      "Coin 5: 11\n",
-      "Total coins: 11\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "# x = 77\n",
-    "x = 55\n",
-    "# coins = [13, 10, 3]\n",
-    "coins = [10, 5]\n",
-    "coins = sorted(coins, reverse=True)\n",
+    "x = 15\n",
+    "a = 10\n",
+    "b = 5\n",
     "\n",
-    "if any( [ x%c==0 for c in coins] ):\n",
-    "    total = 0\n",
-    "    rest = x\n",
-    "    coin_i = 0\n",
-    "    for i in range(len(coins)):\n",
-    "        if rest%coins[i] == 0:\n",
-    "            coin_i = rest//coins[i]\n",
-    "            rest = (rest%coins[i])\n",
+    "bigger = max(a, b)\n",
+    "minor = min(a, b)\n",
     "\n",
-    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
-    "        total += coin_i\n",
-    "    \n",
-    "    print( f\"Total coins: {total}\" )\n",
+    "if x % bigger != 0 and x % minor != 0:\n",
+    "    print(-1)\n",
     "else:\n",
-    "    print(-1)\n"
+    "    print( x // bigger + x % bigger // minor )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "refazer  esses códigos pois nao estao funcionando. misturei e confundi td"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x = 77\n",
-    "x = 55\n",
-    "# coins = [13, 10, 3]\n",
-    "coins = [10, 5]\n",
-    "coins = sorted(coins, reverse=True)\n",
-    "\n",
-    "if any( [ x%c==0 for c in coins] ):\n",
-    "    total = 0\n",
-    "    rest = x\n",
-    "    coin_i = 0\n",
-    "    for i in range(len(coins)):\n",
-    "        if rest%coins[i] == 0:\n",
-    "            coin_i = rest//coins[i]\n",
-    "            rest = (rest%coins[i])\n",
-    "\n",
-    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
-    "        total += coin_i\n",
-    "    \n",
-    "    print( f\"Total coins: {total}\" )\n",
-    "else:\n",
-    "    print(-1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ">  This solution don't work with float numbers, as we can se in the test in the cell below (below 2 cells).   \n",
-    "> It returns -1, but it should return 2 coins of 0.50 and 1 of 0.10!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "x = 1.1\n",
-    "coins = [0.5, 0.25, 0.1]\n",
-    "coins = sorted(coins, reverse=True)\n",
+    "# dont work in this case: the answer should be 7 of 3\n",
     "\n",
-    "if any( [ x%c==0 for c in coins] ):\n",
-    "    total = 0\n",
-    "    rest = x\n",
-    "    coin_i = 0\n",
-    "    for i in range(len(coins)):\n",
-    "        if rest%coins[i] == 0:\n",
-    "            coin_i = rest//coins[i]\n",
-    "            rest = (rest%coins[i])\n",
+    "x = 21\n",
+    "a = 10\n",
+    "b = 3\n",
     "\n",
-    "        print(f\"Coin {coins[i]}: {coin_i}\")\n",
-    "        total += coin_i\n",
-    "    \n",
-    "    print( f\"Total coins: {total}\" )\n",
+    "bigger = max(a, b)\n",
+    "minor = min(a, b)\n",
+    "\n",
+    "if x % bigger != 0 and x % minor != 0:\n",
+    "    print(-1)\n",
     "else:\n",
-    "    print(-1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Solution for float numbers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[75], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m total, change \u001b[38;5;241m=\u001b[39m calc_change(integer_part)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m float_part:\n\u001b[1;32m---> 31\u001b[0m     total_float_part, change_float_part \u001b[38;5;241m=\u001b[39m \u001b[43mcalc_change\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfloat_part\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     33\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m total_float_part\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m change_float_part\u001b[38;5;241m.\u001b[39mitems():\n",
-      "Cell \u001b[1;32mIn[75], line 23\u001b[0m, in \u001b[0;36mcalc_change\u001b[1;34m(money)\u001b[0m\n\u001b[0;32m     20\u001b[0m         coin_i \u001b[38;5;241m=\u001b[39m rest\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mcoins[i]\n\u001b[0;32m     21\u001b[0m         rest \u001b[38;5;241m=\u001b[39m (rest\u001b[38;5;241m%\u001b[39mcoins[i])\n\u001b[1;32m---> 23\u001b[0m     change[coins[i]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m(coin_i)\n\u001b[0;32m     24\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m coin_i\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total, change\n",
-      "Cell \u001b[1;32mIn[75], line 23\u001b[0m, in \u001b[0;36mcalc_change\u001b[1;34m(money)\u001b[0m\n\u001b[0;32m     20\u001b[0m         coin_i \u001b[38;5;241m=\u001b[39m rest\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39mcoins[i]\n\u001b[0;32m     21\u001b[0m         rest \u001b[38;5;241m=\u001b[39m (rest\u001b[38;5;241m%\u001b[39mcoins[i])\n\u001b[1;32m---> 23\u001b[0m     change[coins[i]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m(coin_i)\n\u001b[0;32m     24\u001b[0m     total \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m coin_i\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total, change\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1457\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.SafeCallWrapper.__call__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:701\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1395\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:1344\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_pydevd_bundle/pydevd_cython.pyx:312\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\rhuan\\.pyenv\\pyenv-win\\versions\\3.10.11\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2070\u001b[0m, in \u001b[0;36mPyDB.do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, exception_type)\u001b[0m\n\u001b[0;32m   2067\u001b[0m             from_this_thread\u001b[38;5;241m.\u001b[39mappend(frame_custom_thread_id)\n\u001b[0;32m   2069\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_threads_suspended_single_notification\u001b[38;5;241m.\u001b[39mnotify_thread_suspended(thread_id, thread, stop_reason):\n\u001b[1;32m-> 2070\u001b[0m         keep_suspended \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_do_wait_suspend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msuspend_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrom_this_thread\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframes_tracker\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2072\u001b[0m frames_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2074\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m keep_suspended:\n\u001b[0;32m   2075\u001b[0m     \u001b[38;5;66;03m# This means that we should pause again after a set next statement.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\rhuan\\.pyenv\\pyenv-win\\versions\\3.10.11\\lib\\site-packages\\debugpy\\_vendored\\pydevd\\pydevd.py:2106\u001b[0m, in \u001b[0;36mPyDB._do_wait_suspend\u001b[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\u001b[0m\n\u001b[0;32m   2103\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_input_hook()\n\u001b[0;32m   2105\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_internal_commands()\n\u001b[1;32m-> 2106\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2108\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcancel_async_evaluation(get_current_thread_id(thread), \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mid\u001b[39m(frame)))\n\u001b[0;32m   2110\u001b[0m \u001b[38;5;66;03m# process any stepping instructions\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "from decimal import Decimal, getcontext\n",
-    "# Set the precision to 30 digits\n",
-    "getcontext().prec = 30\n",
-    "\n",
-    "x = Decimal(\"1.11\")\n",
-    "\n",
-    "coins = [Decimal(\"0.50\"), Decimal(\"0.25\"), Decimal(\"0.10\")]\n",
-    "coins = sorted(coins, reverse=True)\n",
-    "\n",
-    "integer_part = Decimal( math.floor(x) )\n",
-    "float_part = x-integer_part\n",
-    "\n",
-    "def calc_change(money):\n",
-    "    total = 0\n",
-    "    rest = money\n",
-    "    coin_i = 0\n",
-    "    change = {}\n",
-    "    for i in range(len(coins)):  #if rest == 0 can break #test later\n",
-    "        if rest%coins[i] == 0:\n",
-    "            coin_i = rest//coins[i]\n",
-    "            rest = (rest%coins[i])\n",
-    "\n",
-    "        change[coins[i]] = int(coin_i)\n",
-    "        total += coin_i\n",
-    "    \n",
-    "    return total, change\n",
-    "\n",
-    "total, change = calc_change(integer_part)\n",
-    "\n",
-    "if float_part:\n",
-    "    total_float_part, change_float_part = calc_change(float_part)\n",
-    "\n",
-    "    total += total_float_part\n",
-    "    for k, v in change_float_part.items():\n",
-    "        change[k] += change_float_part[k]\n",
-    "\n",
-    "if total > 0:\n",
-    "    print( f\"Total coins: {total}\" )\n",
-    "\n",
-    "    for k,v in change.items():\n",
-    "        print(f\"Coin {k:.2f}: {v}\")\n",
-    "else:\n",
-    "    print(\"No change\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Decimal('1'), Decimal('0.01'))"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Decimal(\"0.11\")//Decimal(\"0.1\"), Decimal(\"0.11\")%Decimal(\"0.1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Decimal('1')"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Decimal( math.floor(Decimal(\"1.11\")) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "55%50"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> In this case, with the quantity of coins available in the machine."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
-   "source": [
-    "x=77\n",
-    "\n",
-    "a=10\n",
-    "b=7\n",
-    "\n",
-    "bigger = max(a,b)\n",
-    "minor = min(a,b)\n",
-    "\n",
-    "if x%bigger == 0 or x%minor == 0:\n",
-    "    #it works only with coins of 10 and less than 10\n",
-    "    print(x//bigger + (x%bigger)//minor)\n",
-    "else:\n",
-    "    print(-1) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Key takeway\n",
-    "The important part here is to get that the number need to be divisible at least by one of the two coins. This is the only case where it is impossible."
+    "    print( x // bigger + x % bigger // minor )"
    ]
   },
   {
@@ -1167,6 +897,78 @@
     "$$\n",
     "T = \\frac{|X - Y|}{v_{\\text{relative}}}\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Other questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coin_change(coins, amount):\n",
+    "    dp = [float('inf')] * (amount + 1)\n",
+    "    dp[0] = 0  # 0 coins to make amount 0\n",
+    "    \n",
+    "    for coin in coins:\n",
+    "        for i in range(coin, amount + 1):\n",
+    "            dp[i] = min(dp[i], dp[i - coin] + 1)\n",
+    "    \n",
+    "    return dp[amount] if dp[amount] != float('inf') else -1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test case 1 passed. Result: 3\n",
+      "Test case 2 passed. Result: -1\n",
+      "Test case 3 passed. Result: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test case 1: Example with multiple denominations\n",
+    "coins = [1, 2, 5]\n",
+    "amount = 11\n",
+    "expected_result = 3  # We can use 5 + 5 + 1 = 11, so 3 coins in total\n",
+    "result = coin_change(coins, amount)\n",
+    "assert result == expected_result, f\"Test failed! Expected {expected_result}, got {result}\"\n",
+    "print(f\"Test case 1 passed. Result: {result}\")\n",
+    "\n",
+    "# Test case 2: Impossible to make the amount\n",
+    "coins = [2]\n",
+    "amount = 3\n",
+    "expected_result = -1  # Not possible to make 3 using only 2\n",
+    "result = coin_change(coins, amount)\n",
+    "assert result == expected_result, f\"Test failed! Expected {expected_result}, got {result}\"\n",
+    "print(f\"Test case 2 passed. Result: {result}\")\n",
+    "\n",
+    "# Test case 3: Amount is 0, should return 0\n",
+    "coins = [1, 2, 5]\n",
+    "amount = 0\n",
+    "expected_result = 0  # 0 coins needed to make 0\n",
+    "result = coin_change(coins, amount)\n",
+    "assert result == expected_result, f\"Test failed! Expected {expected_result}, got {result}\"\n",
+    "print(f\"Test case 3 passed. Result: {result}\")\n"
    ]
   }
  ],
