--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -545,6 +545,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Math.ceil and floor division"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Floor division\n",
     "\n",
     "The floor division of negative numbers could return a number that we are not expecting!"
@@ -769,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Police and Thief\n",
+    "**Police and Thief**\n",
     "\n",
     "[Link](https://www.codechef.com/practice/course/logical-problems/DIFF800/problems/POLTHIEF?tab=statement)\n",
     "\n",
@@ -782,21 +789,21 @@
     "\n",
     "Find the **minimum** time (in seconds) in which the policeman can catch the thief. Note that, the policeman catches the thief as soon as their locations become equal and the thief will try to evade the policeman for as long as possible.\n",
     "\n",
-    "### Input Format\n",
+    "**Input Format**\n",
     "\n",
     "-   The first line of input will contain an integer T --- the number of test cases. The description of T test cases follows.\n",
     "-   The first and only line of each test case contains two integers X and Y, as described in the problem statement.\n",
     "\n",
-    "### Output Format\n",
+    "**Output Format**\n",
     "\n",
     "For each test case, output in a single line the minimum time taken by the policeman to catch the thief.\n",
     "\n",
-    "### Constraints\n",
+    "**Constraints**\n",
     "\n",
     "-   1≤T≤10001≤T≤1000\n",
     "-   -105≤X,Y≤105-105≤X,Y≤105\n",
     "\n",
-    "### Sample 1:\n",
+    "**Sample 1:**\n",
     "\n",
     "Input\n",
     "```\n",
@@ -813,7 +820,7 @@
     "0\n",
     "```\n",
     "\n",
-    "### Explanation:\n",
+    "**Explanation:**\n",
     "\n",
     "**Test case 11**: The initial locations of the policeman and thief are 11 and 33 respectively. The minimum time taken by the policeman to catch the thief is 22 seconds, and this happens when both the policeman and the thief move towards the right.\n",
     "\n",
@@ -970,6 +977,40 @@
     "assert result == expected_result, f\"Test failed! Expected {expected_result}, got {result}\"\n",
     "print(f\"Test case 3 passed. Result: {result}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding the correct formula\n",
+    "\n",
+    "Discrete math knowledge about proving odd, even, divisibility, etc\n",
+    "\n",
+    "questions  \n",
+    "https://www.codechef.com/practice/course/logical-problems/DIFF1000/problems/EQLZING -> proven that the number was even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lists\n",
+    "\n",
+    "questions  \n",
+    "https://www.codechef.com/practice/course/logical-problems/DIFF1000/problems/PALL01 -> test if first element of list is equal to the last\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
