--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -401,8 +401,19 @@
    ],
    "source": [
     "total_seconds = 186_399\n",
-    "seconds = total_seconds % 60\n",
     "\n",
+    "# total_seconds / 60 = It give the quantity of groups of 60\n",
+    "# so we use mod to take the remainder of it had left\n",
+    "\n",
+    "seconds = total_seconds % 60 \n",
+    "\n",
+    "# total_seconds // 60 = It give the quantity of groups of 60, and using // we throw away the remainder.\n",
+    "# This acctualy remove the remaider from the calculation, so it won't enter in the next calculations!\n",
+    "# We keep doing this in the next calculations to remove the remaider.\n",
+    "\n",
+    "# in every step we need to calculate the groups before and remove the remaider of each one\n",
+    "# and go further and calculate the next group and take the remaider of the next group\n",
+    "# because the remaider of the next group is what we want for this step!\n",
     "minutes = total_seconds // 60 % 60\n",
     "hours = total_seconds // 60 // 60 % 24\n",
     "days = total_seconds // 60 // 60 // 24\n",
