--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -678,10 +678,13 @@
     "### Questions about quantity of groups\n",
     "\n",
     "This questions want to know how many groups of N it should have, but some times there is a remainder.  \n",
-    "There is 2 types of questions in relation of how to handle this.\n",
-    "- the remainder is put alone in one group (leving space in it) or\n",
+    "There is 3 types of questions in relation of how to handle this.\n",
+    "- the remainder is put alone in one group (leving space in it)\n",
     "> We use math.ceil(x/n) to round up to\n",
-    "- the just want to know the quantity of remainder to do something else.\n",
+    "- the remainder in the last group is discarded \n",
+    "> We use floor division x//n to round down\n",
+    "> Remember that floor division of negative numbers is even more negative. It also didn't exist negative quantity of groups in real life!\n",
+    "- they just want to know the quantity of remainder to do something else.\n",
     "> We use mod to get the remainder x%n"
    ]
   },
