--- a/DSA.ipynb
+++ b/DSA.ipynb
@@ -64,8 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Similar questions\n",
+    "\n",
+    "https://www.codechef.com/practice/course/logical-problems/DIFF1000/problems/FLOW005"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
