--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability Cheatsheet for Machine Learning\n",
-    "\n",
+    "# Probability Cheatsheet for Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.1 Regression Metrics\n",
     "\n",
     "#### 1.1.2 Residuals\n",
@@ -92,9 +97,13 @@
     "plt.title('Receiver Operating Characteristic')\n",
     "plt.legend(loc=\"lower right\")\n",
     "plt.show()\n",
-    "```\n",
-    "\n",
-    "---\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## 1.2 Probabilistic Theory\n",
     "\n",
