--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -121,16 +121,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1.2 Probabilistic Theory\n",
     "\n",
-    "## 1.2 Probabilistic Theory\n",
+    "**What is it?**\n",
+    "- The relative size of outcomes\n",
+    "    \n",
+    "**How to calculate the size / quantity?**\n",
+    "- Using Combinatorics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic Probability\n",
     "\n",
-    "#### 1.2.1 Probabilistic Independence\n",
-    "- **Definition**: Two events are independent if the occurrence of one does not affect the probability of the other.\n",
-    "- **Calculation**: \\( P(A \\cap B) = P(A) \\times P(B) \\)\n",
+    "## Definitions\n",
     "\n",
-    "#### 1.2.2 Generative and Discriminative Models\n",
-    "- **Generative Models**: Learn the joint probability \\( P(X, Y) \\) (e.g., Naive Bayes, Gaussian Mixture Models).\n",
-    "- **Discriminative Models**: Learn the conditional probability \\( P(Y | X) \\) (e.g., Logistic Regression, SVM).\n",
+    "* **Experiment:** A process that leads to an uncertain outcome.\n",
+    "* **Sample Space (S):** The set of all possible outcomes of an experiment.\n",
+    "* **Event:** A subset of the sample space.\n",
+    "* **Probability of an Event (P(A)):** A measure of the likelihood of an event A occurring.  $0 \\le P(A) \\le 1$\n",
+    "* **Impossible Event:** An event with a probability of 0.\n",
+    "* **Certain Event:** An event with a probability of 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probabilistic Independence VS Mutually exclusive events\n",
+    "\n",
+    "### Probabilistic Independence\n",
+    "\n",
+    "**Definition**\n",
+    "\n",
+    "Two events A and B are independent if the occurrence of one does not affect the probability of the occurrence of the other.  Mathematically, this means:\n",
+    "\n",
+    "$P(B|A) = P(B)$  or equivalently  $P(A|B) = P(A)$ and also equivalently $P(A \\cap B) = P(A) P(B)$.\n",
+    "\n",
+    "**Example**\n",
+    "\n",
+    "Consider flipping a fair coin twice. Let A be the event of getting heads on the first flip and B be the event of getting heads on the second flip. Since the outcomes of the two flips don't affect each other, A and B are independent events.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mutually exclusive events\n",
+    "\n",
+    "Mutually exclusive events cannot occur simultaneously.\n",
+    "\n",
+    "> **Caution**: Don't confuse __mutually exclusive__ events with __independent events__.  \n",
+    "> **Mutually exclusive** events are **dependent** events.   \n",
+    "> If A and B are _mutually exclusive_ and have _non-zero probabilities_, knowing that A has occurred means B *cannot* occur, so they are **dependent**.  \n",
+    "> If one of the events has 0 probability, they could be independent.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probability Rules\n",
+    "\n",
+    "**Sum Rule:**  \n",
+    "For any events A and B: $P(A \\cup B) = P(A) + P(B) - P(A \\cap B)$.\n",
+    "\n",
+    "> For **mutually exclusive** events A and B (i.e., they cannot occur simultaneously), $P(A \\cup B) = P(A) + P(B)$.\n",
+    "\n",
+    "**Complement Rule:**  \n",
+    "The probability of an event A not occurring (denoted A') is  $P(A') = 1 - P(A)$.\n",
+    "\n",
+    "**Conditional Probability:**  \n",
+    "The probability of event B occurring given that event A has already occurred is $P(B|A) = \\frac{P(A \\cap B)}{P(A)}$, where $P(A) > 0$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "#### 1.2.3 Conditional Probabilities\n",
     "- **Bayes' Theorem**: \\( P(A|B) = \\frac{P(B|A) P(A)}{P(B)} \\)\n",
@@ -216,7 +297,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "#### 1.2.2 Generative and Discriminative Models\n",
+    "- **Generative Models**: Learn the joint probability \\( P(X, Y) \\) (e.g., Naive Bayes, Gaussian Mixture Models).\n",
+    "- **Discriminative Models**: Learn the conditional probability \\( P(Y | X) \\) (e.g., Logistic Regression, SVM)."
+   ]
   }
  ],
  "metadata": {
